crates/musli/tests/ui/illegal_fallback_variant_error.stderr
error: The #[musli(default)] variant must be empty
 --> tests/ui/illegal_fallback_variant_error.rs:6:13
  |
6 |     #[musli(default)]
  |             ^^^^^^^

error: Only one #[musli(default)] variant is supported
  --> tests/ui/illegal_fallback_variant_error.rs:17:13
   |
17 |     #[musli(default)]
   |             ^^^^^^^
